elements refactor